tests/data/invalid/bare_string_excluded_char.extxyz
1
Properties=species:S:1:pos:R:3 note=a=b
H 0.0 0.0 0.0
